@@ -1,22 +1,90 @@
 <?php
 
-/* PHP configuration file placeholder.
- *
- * This should be replaced by a configuration file generated from
- * 'global.conf'. See that file for more information.
- * This file generates an error when used, to prevent using an
- * unconfigured system.
- *
+/* Configuration file for PHP-scripts
  * $Id$
  */
 
-// is this the webinterface or commandline?
-if ( isset($_SERVER['REMOTE_ADDR']) ) {
-	echo "<fieldset class=\"error\"><legend>Error</legend>\n" .
-		"DOMjudge is not configured yet: edit 'etc/global.cfg' and then run 'make'." .
-		"</fieldset>\n";
-} else {
-	echo "DOMjudge is not configured yet: edit 'etc/global.cfg' and then run 'make'.\n";
-}
+/*** AUTOGENERATE HEADER START ***/
+//
+// This configuration file was automatically generated
+// with command 'php'
+// on Wed Apr 18 22:35:17 CEST 2007 on host 'darwin'.
+//
+// Do not edit this file by hand! Instead, edit parts of this
+// file which are outside the 'AUTOGENERATE HEADER' and
+// 'GLOBAL CONFIG INCLUDE' tags in the templates 'config.template.*'.
+//
+// Configuration options inside 'GLOBAL CONFIG INCLUDE' tags
+// should be edited in the main configuration file 'global.cfg'
+// and then be included here by running 'make config' in the root
+// of the system directory.
+//
+/*** AUTOGENERATE HEADER END ***/
 
-exit(-1);
+/** Loglevels */
+define_syslog_variables();
+error_reporting(E_ALL);
+
+/** Possible exitcodes from testsol and their meaning */
+$EXITCODES = array (
+	0	=>	'correct',
+	101	=>	'compiler-error',
+	102	=>	'timelimit',
+	103	=>	'run-error',
+	104	=>	'no-output',
+	105	=>	'wrong-answer'
+	);
+
+/** Include MySQL database passwords from a separate file */
+require('passwords.php');
+
+
+/*** GLOBAL CONFIG INCLUDE START ***/
+define('DOMJUDGE_VERSION', '2.0.0');
+define('ROOT_BASE', '/var/tmp/domjudge');
+define('SYSTEM_ROOT', '/var/tmp/domjudge/system');
+define('OUTPUT_ROOT', '/var/tmp/domjudge/output');
+define('INPUT_ROOT', '/var/tmp/domjudge/input');
+define('INCOMINGDIR', '/var/tmp/domjudge/output/incoming');
+define('SUBMITDIR', '/var/tmp/domjudge/output/sources');
+define('JUDGEDIR', '/var/tmp/domjudge/output/judging');
+define('LOGDIR', '/var/tmp/domjudge/output/log');
+define('CHROOT_PREFIX', '/var/tmp/domjudge/output/judging');
+define('WEBSERVER', 'localhost');
+define('WEBBASEURI', 'http://localhost/dj/');
+define('SUBMITSERVER', 'localhost');
+define('SUBMITPORT', 9147);
+define('DBSERVER', 'localhost');
+define('DBNAME', 'domjudge');
+define('SCP_HOST', 'localhost');
+define('RUNUSER', 'domtest');
+define('VALID_USERS', 'thijs,domtest,nobody');
+define('USE_CHROOT', 1);
+define('CHROOT_SCRIPT', '');
+define('COMPILETIME', 30);
+define('SOURCESIZE', 256);
+define('MEMLIMIT', 524288);
+define('FILELIMIT', 4096);
+define('PROCLIMIT', 8);
+define('ENABLE_CMDSUBMIT_SERVER', 1);
+define('ENABLE_WEBSUBMIT_SERVER', 1);
+define('SUBMITCLIENT_METHOD', 1);
+define('USERSUBMITDIR', '.submit');
+define('USERPERMFILE', 0600);
+define('USERPERMDIR', 0700);
+define('WARN_MTIME', 5);
+define('STRICTIPCHECK', 0);
+define('VERIFICATION_REQUIRED', 0);
+define('SHOW_COMPILE', 2);
+define('SHOW_AFFILIATIONS', 1);
+define('PENALTY_TIME', 20);
+define('LANG_EXTS', 'C,c C++,cpp,cc,c++ Java,java Pascal,pas,p Perl,pl Bash,sh');
+define('BEEP_CMD', '/var/tmp/domjudge/system/bin/beep');
+define('BEEP_ERROR', '-D 200  -r 3  -f 550 -l 500');
+define('BEEP_WARNING', '-D 200  -r 3  -f 550 -l 300');
+define('BEEP_SUBMIT', '-f 400 -l 100 -n -f 400 -l 70');
+define('BEEP_ACCEPT', '-f 400 -l 100 -n -f 500 -l 70');
+define('BEEP_REJECT', '-f 400 -l 100 -n -f 350 -l 70');
+define('BALLOON_CMD', 'mail -s \"Balloon notification\" thijs@kinkhorst.com');
+define('DEBUG', 0);
+/*** GLOBAL CONFIG INCLUDE END ***/
