@@ -1,14 +1,88 @@
-#!/bin/bash
-
-# bash-shell script configuration file placeholder.
-#
-# This should be replaced by a configuration file generated from
-# 'global.conf'. See that file for more information.
-# This file generates an error when used, to prevent using an
-# unconfigured system.
-#
+# Configuration file for bash-shell scripts
 # $Id$
 
-echo "DOMjudge is not configured yet: edit 'etc/global.cfg' and then run 'make'."
+### AUTOGENERATE HEADER START ###
+#
+# This configuration file was automatically generated
+# with command 'sh'
+# on Wed Apr 18 22:35:17 CEST 2007 on host 'darwin'.
+#
+# Do not edit this file by hand! Instead, edit parts of this
+# file which are outside the 'AUTOGENERATE HEADER' and
+# 'GLOBAL CONFIG INCLUDE' tags in the templates 'config.template.*'.
+#
+# Configuration options inside 'GLOBAL CONFIG INCLUDE' tags
+# should be edited in the main configuration file 'global.cfg'
+# and then be included here by running 'make config' in the root
+# of the system directory.
+#
+### AUTOGENERATE HEADER END ###
 
-exit -1
+# Loglevels (as defined in syslog.h)
+LOG_EMERG=0
+LOG_ALERT=1
+LOG_CRIT=2
+LOG_ERR=3
+LOG_WARNING=4
+LOG_NOTICE=5
+LOG_INFO=6
+LOG_DEBUG=7
+
+# Exit/error codes:
+E_CORRECT=0
+E_COMPILE=101
+E_TIMELIMIT=102
+E_RUNERROR=103
+E_OUTPUT=104
+E_ANSWER=105
+E_INTERN=127 # Internal script error
+
+### GLOBAL CONFIG INCLUDE START ###
+DOMJUDGE_VERSION="2.0.0"
+ROOT_BASE="/var/tmp/domjudge"
+SYSTEM_ROOT="/var/tmp/domjudge/system"
+OUTPUT_ROOT="/var/tmp/domjudge/output"
+INPUT_ROOT="/var/tmp/domjudge/input"
+INCOMINGDIR="/var/tmp/domjudge/output/incoming"
+SUBMITDIR="/var/tmp/domjudge/output/sources"
+JUDGEDIR="/var/tmp/domjudge/output/judging"
+LOGDIR="/var/tmp/domjudge/output/log"
+CHROOT_PREFIX="/var/tmp/domjudge/output/judging"
+WEBSERVER="localhost"
+WEBBASEURI="http://localhost/dj/"
+SUBMITSERVER="localhost"
+SUBMITPORT=9147
+DBSERVER="localhost"
+DBNAME="domjudge"
+SCP_HOST="localhost"
+RUNUSER="domtest"
+VALID_USERS="thijs,domtest,nobody"
+USE_CHROOT=1
+CHROOT_SCRIPT=""
+COMPILETIME=30
+SOURCESIZE=256
+MEMLIMIT=524288
+FILELIMIT=4096
+PROCLIMIT=8
+ENABLE_CMDSUBMIT_SERVER=1
+ENABLE_WEBSUBMIT_SERVER=1
+SUBMITCLIENT_METHOD=1
+USERSUBMITDIR=".submit"
+USERPERMFILE=0600
+USERPERMDIR=0700
+WARN_MTIME=5
+STRICTIPCHECK=0
+VERIFICATION_REQUIRED=0
+SHOW_COMPILE=2
+SHOW_AFFILIATIONS=1
+PENALTY_TIME=20
+LANG_EXTS="C,c C++,cpp,cc,c++ Java,java Pascal,pas,p Perl,pl Bash,sh"
+BEEP_CMD="/var/tmp/domjudge/system/bin/beep"
+BEEP_ERROR="-D 200  -r 3  -f 550 -l 500"
+BEEP_WARNING="-D 200  -r 3  -f 550 -l 300"
+BEEP_SUBMIT="-f 400 -l 100 -n -f 400 -l 70"
+BEEP_ACCEPT="-f 400 -l 100 -n -f 500 -l 70"
+BEEP_REJECT="-f 400 -l 100 -n -f 350 -l 70"
+BALLOON_CMD="mail -s \"Balloon notification\" thijs@kinkhorst.com"
+DEBUG=0
+### GLOBAL CONFIG INCLUDE END ###
