@@ -1,19 +1,69 @@
-% LaTeX configuration file placeholder.
-%
-% This should be replaced by a configuration file generated from
-% 'global.conf'. See that file for more information.
-% This file generates an error when used, to prevent using an
-% unconfigured system.
-%
+% Configuration file for LaTeX
 % $Id$
 
-\PackageError{config}{%
-DOMjudge is not configured yet: edit 'etc/global.cfg' and then run 'make'}{}
+%%% AUTOGENERATE HEADER START %%%
+%
+% This configuration file was automatically generated
+% with command 'tex'
+% on Wed Apr 18 22:35:18 CEST 2007 on host 'darwin'.
+%
+% Do not edit this file by hand! Instead, edit parts of this
+% file which are outside the 'AUTOGENERATE HEADER' and
+% 'GLOBAL CONFIG INCLUDE' tags in the templates 'config.template.*'.
+%
+% Configuration options inside 'GLOBAL CONFIG INCLUDE' tags
+% should be edited in the main configuration file 'global.cfg'
+% and then be included here by running 'make config' in the root
+% of the system directory.
+%
+%%% AUTOGENERATE HEADER END %%%
 
-% Put the begin/end document statements here so that LaTeX won't
-% generate any dvi output and possibly overwrite old files. Also
-% prevents display of errors generated by missing config files,
-% because of the default behaviour of latex of continueing processing
-% after errors [sigh].
-\begin{document}
-\end{document}
+%%% GLOBAL CONFIG INCLUDE START %%%
+\def\DOMJUDGE_VERSION{2.0.0}
+\def\ROOT_BASE{/var/tmp/domjudge}
+\def\SYSTEM_ROOT{/var/tmp/domjudge/system}
+\def\OUTPUT_ROOT{/var/tmp/domjudge/output}
+\def\INPUT_ROOT{/var/tmp/domjudge/input}
+\def\INCOMINGDIR{/var/tmp/domjudge/output/incoming}
+\def\SUBMITDIR{/var/tmp/domjudge/output/sources}
+\def\JUDGEDIR{/var/tmp/domjudge/output/judging}
+\def\LOGDIR{/var/tmp/domjudge/output/log}
+\def\CHROOT_PREFIX{/var/tmp/domjudge/output/judging}
+\def\WEBSERVER{localhost}
+\def\WEBBASEURI{http://localhost/dj/}
+\def\SUBMITSERVER{localhost}
+\def\SUBMITPORT{9147}
+\def\DBSERVER{localhost}
+\def\DBNAME{domjudge}
+\def\SCP_HOST{localhost}
+\def\RUNUSER{domtest}
+\def\VALID_USERS{thijs,domtest,nobody}
+\def\USE_CHROOT{1}
+\def\CHROOT_SCRIPT{}
+\def\COMPILETIME{30}
+\def\SOURCESIZE{256}
+\def\MEMLIMIT{524288}
+\def\FILELIMIT{4096}
+\def\PROCLIMIT{8}
+\def\ENABLE_CMDSUBMIT_SERVER{1}
+\def\ENABLE_WEBSUBMIT_SERVER{1}
+\def\SUBMITCLIENT_METHOD{1}
+\def\USERSUBMITDIR{.submit}
+\def\USERPERMFILE{0600}
+\def\USERPERMDIR{0700}
+\def\WARN_MTIME{5}
+\def\STRICTIPCHECK{0}
+\def\VERIFICATION_REQUIRED{0}
+\def\SHOW_COMPILE{2}
+\def\SHOW_AFFILIATIONS{1}
+\def\PENALTY_TIME{20}
+\def\LANG_EXTS{C,c C++,cpp,cc,c++ Java,java Pascal,pas,p Perl,pl Bash,sh}
+\def\BEEP_CMD{/var/tmp/domjudge/system/bin/beep}
+\def\BEEP_ERROR{-D 200  -r 3  -f 550 -l 500}
+\def\BEEP_WARNING{-D 200  -r 3  -f 550 -l 300}
+\def\BEEP_SUBMIT{-f 400 -l 100 -n -f 400 -l 70}
+\def\BEEP_ACCEPT{-f 400 -l 100 -n -f 500 -l 70}
+\def\BEEP_REJECT{-f 400 -l 100 -n -f 350 -l 70}
+\def\BALLOON_CMD{mail -s \"Balloon notification\" thijs@kinkhorst.com}
+\def\DEBUG{0}
+%%% GLOBAL CONFIG INCLUDE END %%%
