@@ -51,7 +51,7 @@ DOMJUDGE_VERSION[string]=2.0.0
 ###########################
 
 # Root paths for various parts of the system
-ROOT_BASE[eval,string]=$HOME
+ROOT_BASE[eval,string]=/var/tmp/domjudge
 SYSTEM_ROOT[eval,string]=$ROOT_BASE/system
 OUTPUT_ROOT[eval,string]=$ROOT_BASE/output
 INPUT_ROOT[eval,string]=$ROOT_BASE/input
@@ -74,12 +74,12 @@ CHROOT_PREFIX[eval,string]=$JUDGEDIR
 # These can be all the same or different machines.
 
 # Host of the webserver on which the team and jury interface runs
-WEBSERVER[eval,string]=domjudge.example.com
+WEBSERVER[eval,string]=localhost
 # Base URI of the webinterface. Defaults to http://WEBSERVER/ but can
 # be changed e.g. when running in a subdir, at a https-site or different
 # server port.
 # Always end this with a slash!
-WEBBASEURI[eval,string]=http://$WEBSERVER/
+WEBBASEURI[eval,string]=http://$WEBSERVER/dj/
 
 # TCP port and host on which submitdaemon listens
 SUBMITSERVER[eval,string]=$WEBSERVER
@@ -227,10 +227,10 @@ BEEP_REJECT[string]=-f 400 -l 100 -n -f 350 -l 70
 # problem and should receive a balloon. Specify a command which the
 # notification will be piped to or leave empty to disable.
 # Example to notify by e-mail:
-#BALLOON_CMD[string]=mail -s Balloon_notification domjudge@localhost
+BALLOON_CMD[string]=mail -s "Balloon notification" thijs@kinkhorst.com
 # Example to notify by printout:
 #BALLOON_CMD[string]=lpr
-BALLOON_CMD[string]=
+#BALLOON_CMD[string]=
 
 
 #############
