@@ -41,6 +41,8 @@ Version 2.0.0 - SVN
    list all balloons a team is supposed to have.
  - Add event table to DB to store major events of the contest
    (Working on: #1682761).
+ - Only judge submissions that are submitted strictly before the contest
+   end time.
 
 Version 1.3.0 - 6 October 2006
 ------------------------------
